--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,12 +5,15 @@ on:
       - main
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-jobs:
-  bump-version:
-    runs-on: ubuntu-latest
-    steps:
+runs:
+  using: composite
+  steps:
+    - name: Checkout Branch
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Create GITHUB release
       uses: extenda/actions/conventional-release@v0
       id: release
       env:
-        GITHUB_TOKEN: ${{ secrets.github-token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
